--- a/src/app/page/enroll-form/enroll-form.component.html
+++ b/src/app/page/enroll-form/enroll-form.component.html
@@ -1,1 +1,54 @@
-<div class="enroll-form"></div>
+<div
+  class="enroll-form"
+  [formGroup]="parentForm"
+>
+  <div formArrayName="applicants">
+    <div
+      class="applicant"
+      *ngFor="let a of applicants; let i = index;"
+      [formGroupName]="i"
+    >
+      <div class="row">
+        <div class="form-group col">
+          <input
+            class="form-control"
+            type="text"
+            formControlName="firstName"
+            placeholder="First Name"
+          >
+        </div>
+        <div class="form-group col">
+          <input
+            class="form-control"
+            type="text"
+            formControlName="lastName"
+            placeholder="Last Name"
+          >
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="form-group col">
+          <input
+            class="form-control"
+            type="text"
+            formControlName="occupation"
+            placeholder="Occupation"
+          >
+        </div>
+        <div class="form-group col">
+          <input
+            class="form-control"
+            type="text"
+            formControlName="addressLine"
+            placeholder="Address Line"
+          >
+        </div>
+      </div>
+
+      <div class="form-group">
+        <button type="button" class="btn btn-danger" (click)="removeForm(a, i)">Remove</button>
+      </div>
+    </div>
+  </div>
+</div>
